[project]
name = "vaahaka-credits-bot"
version = "0.1.0-alpha"
description = "Discord bot that rewards users with credits for uploading PDF documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.0",
    "aiosqlite>=0.19.0",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
]
